--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,7 +12,6 @@
             display: flex; flex-direction: column;
         }
 
-
         header { 
             background: #2c3e50; color: white; padding: 1.5vh 0; 
             text-align: center; border-bottom: 4px solid #c0392b; 
@@ -20,11 +19,9 @@
         header h1 { margin: 0; font-size: 1.6rem; letter-spacing: 1px; }
         header p { margin: 2px 0; font-size: 0.9rem; opacity: 0.8; }
 
-
         .split-container {
             flex: 1; display: flex; width: 100%; overflow: hidden;
         }
-
 
         /* Left Side: Professional Portrait */
         .left-side {
@@ -37,14 +34,12 @@
             object-fit: cover;
         }
 
-
         /* Right Side: Bio & Expertise */
         .right-side {
             flex: 1.4; padding: 2vh 5%; display: flex; 
             flex-direction: column; justify-content: center;
             background: white;
         }
-
 
         .tagline { font-style: italic; color: #c0392b; font-size: 1rem; margin-bottom: 1.5vh; font-weight: bold; }
         
@@ -53,13 +48,11 @@
             margin-bottom: 2.5vh; text-align: justify;
         }
 
-
         .expertise-grid {
             display: grid; grid-template-columns: 1fr 1fr; gap: 20px; margin-bottom: 2.5vh;
         }
         .expertise-item strong { color: #2c3e50; font-size: 0.9rem; display: block; border-left: 3px solid #c0392b; padding-left: 10px; margin-bottom: 4px;}
         .expertise-item p { margin: 0; font-size: 0.8rem; color: #555; line-height: 1.4; }
-
 
         .cta-group { border-top: 1px solid #eee; padding-top: 2vh; }
         .btn { 
@@ -71,12 +64,10 @@
         .btn-whatsapp { background: #25D366; color: white; border: 1px solid #25D366; }
         .btn:hover { opacity: 0.85; transform: translateY(-2px); box-shadow: 0 4px 8px rgba(0,0,0,0.1); }
 
-
         footer { 
             background: #1a252f; color: #bdc3c7; padding: 2vh 0; 
             text-align: center; font-size: 0.85rem; 
         }
-
 
         /* Responsive scaling for laptops with shorter screens */
         @media (max-height: 750px) {
@@ -85,7 +76,6 @@
             .expertise-grid { gap: 10px; }
             header h1 { font-size: 1.4rem; }
         }
-
 
         /* Mobile Viewport Fix */
         @media (max-width: 768px) {
@@ -98,18 +88,15 @@
 </head>
 <body>
 
-
 <header>
     <h1>Adv. Mohana Gadre, LLB</h1>
     <p>Attorney at Law | 20+ Years of Professional Excellence</p>
 </header>
 
-
 <div class="split-container">
     <div class="left-side">
-        <img src="mona.jpg" alt="Adv. Mohana Gadre" class="profile-img">
+        <img src="Mona.jpg" alt="Adv. Mohana Gadre" class="profile-img">
     </div>
-
 
     <div class="right-side">
         <p class="tagline">Meticulous by Nature, Master of the Law, Committed to Your Success.</p>
@@ -117,7 +104,6 @@
         <div class="bio-text">
             With over two decades of distinguished legal practice, Adv. Mohana Gadre offers a masterful command of family, property, and environmental law. Her practice is defined by a meticulous, detail-oriented approach and an unwavering commitment to securing positive outcomes. She serves as a trusted partner to her clients, providing strategic advocacy and empathetic guidance to navigate complex legal landscapes.
         </div>
-
 
         <div class="expertise-grid">
             <div class="expertise-item">
@@ -138,7 +124,6 @@
             </div>
         </div>
 
-
         <div class="cta-group">
             <a href="https://calendly.com/advmohana/30min" class="btn btn-calendly" target="_blank">Book Appointment</a>
             <a href="https://wa.me/919923906381?text=Hello%20Adv.%20Mohana%2C%20I%20would%20like%20to%20schedule%20a%20consultation." class="btn btn-whatsapp" target="_blank">WhatsApp Chat</a>
@@ -146,14 +131,12 @@
     </div>
 </div>
 
-
 <footer>
     <div style="color:white; font-weight:bold; margin-bottom:4px; letter-spacing: 0.5px;">
         mohhna@gmail.com | +91 9923906381 | Pune, Maharashtra
     </div>
     &copy; 2026 Adv. Mohana Gadre | Professional Legal Counsel
 </footer>
-
 
 </body>
 </html>
